# tdd_cpp

./: CMakeLists.txt  README.md  tkbuild.sh
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  Dollar.cpp  Dollar.h  Franc.h  Money.h  main.cpp
tests/: CMakeLists.txt  MoneyTest.cpp  test_main.cpp
